--- a/balanced_movement2.html
+++ b/balanced_movement2.html
@@ -24,9 +24,7 @@
   <p>Large scale curved screen projection</p>
   <p>Realtime audiovisual, Custom C++ software</p>
 
-  <p>This is a new iteration of the <a href="balanced_movement.html">Balanced Movement</a> with a fixed length composition. Visual style was also changed, and the software was modified to show the work on a curved projection screen.</p>
-
-  <p>DOCUMENTATION IN PROGRESS</p>
+  <p>This is a new iteration of the <a href="balanced_movement.html">Balanced Movement</a> with a fixed length composition. Visual style was changed and the software was modified to show the work on a curved projection screen. Balanced Movement 2 was exhibited at the Media Arts and Technology End of Year Show 2019, UC Santa Barbara.</p>
 
   <div class="body-img">
       <img src="img/balmov/bm3.png">
@@ -38,6 +36,10 @@
 
   <div class="body-img">
       <img src="img/balmov/bm_eoys_02.jpg">
+  </div>
+
+  <div>
+    <iframe src="https://player.vimeo.com/video/348973919?byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
   </div>
 
 </div>
