--- a/allosphere.html
+++ b/allosphere.html
@@ -20,26 +20,37 @@
 
 <div class="content-container">
 
-    <h2>AlloSphere Research Group</h2>
+    <h2>AlloSphere Research Gorup</h2>
 
-  <div class="body-img">
-      <img src="img/arg/arg03.jpg">
-  </div>
+    <div class="body-img">
+        <img src="img/arg/arg03.jpg">
+    </div>
+
+    <p>
+        - Multi-projector (26) VR environment<br>
+        - Distributed stereographic rendering<br>
+        - Multi-channel (54.1) spatialized audio
+    </p>
 
     <p>"The AlloSphere includes a three-story cube that has been insulated extensively with sound-absorbing material, making it one of the largest echo-less chambers in the world. Within the chamber are two hemispheres of 5 meter radii, made of perforated aluminum. These are opaque and acoustically transparent." (<a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/AlloSphere">wikipedia</a>)</p>
 
-    <p>I've been working at <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/">AlloSphere Research Group</a> from 2015 to 2018, as a graduate student researcher. I was involved in projects such as <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/html/research/temap.html">TEM/AP Visualization</a>, but mostly I worked as framework developer on AlloSystem and allolib, which were used for those projects.</p>
+    <p>I've been working at <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/">AlloSphere Research Group</a> from 2015 to 2018, as a graduate student researcher. I was involved in projects such as <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/html/research/temap.html">TEM/AP Visualization</a> or <a target="_blank", rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/html/research/quantum.html">Electron wavefunction visualization & sonification</a>, and I also worked as the main developer for the codebase of the AlloSphere research group: <a target="_blank" rel="noopener noreferrer" href="https://github.com/AlloSphere-Research-Group/allolib">Allolib</a>. I worked on every part of the codebase especially the built system and stereographic rendering pipeline for projection mappings.</p>
 
-    <a target="_blank" rel="noopener noreferrer" href="https://github.com/AlloSphere-Research-Group/AlloSystem">AlloSystem</a> is a C++ framework providing similar but different functionalities when compared to OpenFrameworks or Cinder. AlloSystem has built-in spherical projection support that can greatly faciliate creating content for the AlloSphere. <a target="_blank" rel="noopener noreferrer" href="https://github.com/AlloSphere-Research-Group/allolib">Allolib</a> is a fork of AlloSystem recently initiated, integrating higer version of OpenGL, cleaning up CMake build system with better support for Visual Studio, <a target="_blank" rel="noopener noreferrer" href="https://github.com/ocornut/imgui">Dear ImGUI</a> integration for user GUI, and etc.
+    <a target="_blank" rel="noopener noreferrer" href="https://github.com/AlloSphere-Research-Group/AlloSystem">AlloSystem</a> is a C++ framework providing similar but different functionalities when compared to OpenFrameworks or Cinder. AlloSystem has built-in spherical projection support that can greatly faciliate creating content for the AlloSphere. Allolib is a fork of AlloSystem recently initiated, integrating higer version of OpenGL, cleaning up CMake build system with better support for Visual Studio, <a target="_blank" rel="noopener noreferrer" href="https://github.com/ocornut/imgui">Dear ImGUI</a> integration for user GUI, and better handling of dependencies.
 
   <div class="body-img">
-      <img src="img/arg/arg01.jpg">
-      TEM/AP project
+      <img src="img/arg/arg04.jpeg">
+      A view from top, the person in the center of the image interacting with the AlloSphere is the AllSphere Research Group director Professor JoAnn Kuchera-Morin
   </div>
 
   <div class="body-img">
-      <img src="img/arg/arg02.jpg">
-      Project in progress: material science simulation data visualization
+      <img src="img/arg/arg01.jpg">
+      Web GUI and Gesture based control interface for AlloSphere
+  </div>
+
+  <div class="body-img">
+      <img src="img/arg/arg02.jpeg">
+      AlloPortal, a smaller scale curved projection environment built with AlloSphere technology
   </div>
 
 </div>
