--- a/index.html
+++ b/index.html
@@ -13,19 +13,105 @@
 <div class="nav-container">
   <div>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <!-- <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp; -->
     <a href="about.html">About</a>
   </div>
 </div>
 
 <div class="list-container">
+
+  <div class="body-img">
+    <a href="balanced_movement2.html">
+      <img src="img/balmov2_preview.png">
+      Balanced Movement 2
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="wavefront.html">
+      <img src="img/wavefront_preview.jpg">
+      Wavefront
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="scivis.html">
+      <img src="img/vdv_preview.jpg">
+      Scientific Visualization in VR environment
+    </a>
+  </div>
+
   <div class="body-img">
     <a href="reconstruction.html">
-      <img src="img/recon_main.png" alt="reconstruction main image">
-      Reconstruction, 2018
+      <img src="img/recon_preview.png">
+      Reconstruction
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="allosphere.html">
+      <img src="img/sphere_preview.png">
+      AlloSphere Research Group
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="balanced_movement.html">
+      <img src="img/balmov_preview.png">
+      Balanced Movement
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="fragments.html">
+      <img src="img/frag_preview.png">
+      Fragments
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="ancient_stains.html">
+      <img src="img/stains_preview.png">
+      Ancient Stains
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="spherical_flocking.html">
+      <img src="img/flocking_preview.png">
+      Spherical Flocking
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="slitscan.html">
+      <img src="img/slitscan_preview.png">
+      Slitscan Interface
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="amp.html">
+      <img src="img/amp_preview.png">
+      Amp
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="elascreen.html">
+      <img src="img/elascreen_preview.png">
+      Elascreen Interface
+    </a>
+  </div>
+
+  <div class="body-img">
+    <a href="drumthewall.html">
+      <img src="img/drum_preview.png">
+      Drum The Wall
     </a>
   </div>
 
 </div>
 
 </body>
+
