--- a/works.html
+++ b/works.html
@@ -13,7 +13,7 @@
 <div class="nav-container">
   <div>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <!-- <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp; -->
     <a href="about.html">About</a>
   </div>
 </div>
@@ -51,7 +51,7 @@
   <div class="body-img">
     <a href="allosphere.html">
       <img src="img/sphere_preview.png">
-      AlloSphere, AlloSystem, and Allolib
+      AlloSphere Research Group
     </a>
   </div>
 
