--- a/drumthewall.html
+++ b/drumthewall.html
@@ -13,7 +13,7 @@
 <div class="nav-container">
   <div>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <!-- <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp; -->
     <a href="about.html">About</a>
   </div>
 </div>
