update project descriptions

--- a/allosphere.html
+++ b/allosphere.html
@@ -13,14 +13,13 @@
 <div class="nav-container">
   <div>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <!-- <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp; -->
     <a href="about.html">About</a>
   </div>
 </div>
 
 <div class="content-container">
 
-    <h2>AlloSphere Research Gorup</h2>
+    <h2>AlloSphere Research Group</h2>
 
     <div class="body-img">
         <img src="img/arg/arg03.jpg">
