--- a/balanced_movement2.html
+++ b/balanced_movement2.html
@@ -13,7 +13,6 @@
 <div class="nav-container">
   <div>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <!-- <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp; -->
     <a href="about.html">About</a>
   </div>
 </div>
@@ -21,8 +20,11 @@
 <div class="content-container">
   <h2>Balanced Movement 2</h2>
 
-  <p>Large scale curved screen projection</p>
-  <p>Realtime audiovisual, Custom C++ software</p>
+  <p>
+  - Realtime audiovisual, Custom C++ software<br>
+  - Curved screen projection with 2 projectors<br>
+  - 3360 &#215; 1080 resolution video, 2 Channel audio
+  </p>
 
   <p>This is a new iteration of the <a href="balanced_movement.html">Balanced Movement</a> with a fixed length composition. Visual style was changed and the software was modified to show the work on a curved projection screen. Balanced Movement 2 was exhibited at the Media Arts and Technology End of Year Show 2019, UC Santa Barbara.</p>
 
