--- a/scivis.html
+++ b/scivis.html
@@ -13,7 +13,6 @@
 <div class="nav-container">
   <div>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <!-- <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp; -->
     <a href="about.html">About</a>
   </div>
 </div>
@@ -22,7 +21,10 @@
 
     <h2>Scientific Visualization of Simulation Data in VR environment</h2>
 
-    <p>Multi display visualization application on HMD VR, Full immersive projection, and desktop. Custom C++ software</p>
+  <p>
+  - Scientific visualization on different displays simulatneously: HMD VR, immersive VR, and desktop<br>
+  - Stereographic rendering of 3D material simulation data
+  </p>
 
   <div class="body-img">
       <img src="img/vdv/vdv01.png">
