--- a/wavefront.html
+++ b/wavefront.html
@@ -13,7 +13,6 @@
 <div class="nav-container">
   <div>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <!-- <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp; -->
     <a href="about.html">About</a>
   </div>
 </div>
@@ -21,10 +20,13 @@
 <div class="content-container">
   <h2>Wavefront</h2>
 
-  <p>Full immersive projection space</p>
-  <p>Realtime audiovisual, Custom C++ software</p>
+  <p>
+  - Realtime audiovisual, Custom C++ software<br>
+  - Full immersice projection with 26 projectors<br>
+  - 54.1 spatialized Channel audio
+  </p>
 
-  <p>Wavefront is a full immersive audiovisual presented in <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/">AlloSphere</a>. Three dimensinoal wavelets are designed with the inspiration from ocean waves. Then a large number of them are spawned in space, creating a complex scenary with the full surround visual and spatialized sound.</p>
+  <p>Wavefront is a full immersive audiovisual presented in <a target="_blank" rel="noopener noreferrer" href="http://www.allosphere.ucsb.edu/">AlloSphere</a>. Three dimensional wavelets are designed with the inspiration from ocean waves. Then a large number of them are spawned in space, creating a complex scenary with the full surround visual and spatialized sound.</p>
 
   <p>DOCUMENTATION IN PROGRESS</p>
 
