--- a/scivis.html
+++ b/scivis.html
@@ -23,7 +23,7 @@
 
   <p>
   - Scientific visualization on different displays simulatneously: HMD VR, immersive VR, and desktop<br>
-  - Stereographic rendering of 3D material simulation data
+  - Stereoscopic rendering of 3D material simulation data
   </p>
 
   <div class="body-img">
