--- a/balanced_movement2.html
+++ b/balanced_movement2.html
@@ -41,7 +41,7 @@
   </div>
 
   <div>
-    <iframe src="https://player.vimeo.com/video/348973919?byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/348973919?color=ffffff&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   </div>
 
 </div>
