fold older projects

--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
 <body>
 
 <div class="nav-container">
-  <div>
     <a href="index.html">Keehong Youn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-    <!-- <a href="works.html">Works</a>&nbsp;&nbsp;|&nbsp;&nbsp; -->
     <a href="about.html">About</a>
-  </div>
 </div>
 
 <div class="list-container">
@@ -83,34 +80,40 @@
     </a>
   </div>
 
-  <div class="body-img">
-    <a href="slitscan.html">
-      <img src="img/slitscan_preview.png">
-      Slitscan Interface
-    </a>
-  </div>
+  <div>
+    <details>
+        <summary>more</summary>
 
-  <div class="body-img">
-    <a href="amp.html">
-      <img src="img/amp_preview.png">
-      Amp
-    </a>
-  </div>
+        <div class="body-img">
+          <a href="slitscan.html">
+            <img src="img/slitscan_preview.png">
+            Slitscan Interface
+          </a>
+        </div>
 
-  <div class="body-img">
-    <a href="elascreen.html">
-      <img src="img/elascreen_preview.png">
-      Elascreen Interface
-    </a>
-  </div>
+        <div class="body-img">
+          <a href="amp.html">
+            <img src="img/amp_preview.png">
+            Amp
+          </a>
+        </div>
 
-  <div class="body-img">
-    <a href="drumthewall.html">
-      <img src="img/drum_preview.png">
-      Drum The Wall
-    </a>
-  </div>
+        <div class="body-img">
+          <a href="elascreen.html">
+            <img src="img/elascreen_preview.png">
+            Elascreen Interface
+          </a>
+        </div>
 
+        <div class="body-img">
+          <a href="drumthewall.html">
+            <img src="img/drum_preview.png">
+            Drum The Wall
+          </a>
+        </div>
+
+    </details>
+  </div>
 </div>
 
 </body>
