update resume, divide contents into two pages

--- a/index.html
+++ b/index.html
@@ -46,20 +46,6 @@
   </div>
 
   <div class="body-img">
-    <a href="allosphere.html">
-      <img src="img/sphere_preview.png">
-      AlloSphere Research Group
-    </a>
-  </div>
-
-  <div class="body-img">
-    <a href="balanced_movement.html">
-      <img src="img/balmov_preview.png">
-      Balanced Movement
-    </a>
-  </div>
-
-  <div class="body-img">
     <a href="fragments.html">
       <img src="img/frag_preview.png">
       Fragments
@@ -80,40 +66,10 @@
     </a>
   </div>
 
-  <div>
-    <details>
-        <summary>more</summary>
+</div>
 
-        <div class="body-img">
-          <a href="slitscan.html">
-            <img src="img/slitscan_preview.png">
-            Slitscan Interface
-          </a>
-        </div>
-
-        <div class="body-img">
-          <a href="amp.html">
-            <img src="img/amp_preview.png">
-            Amp
-          </a>
-        </div>
-
-        <div class="body-img">
-          <a href="elascreen.html">
-            <img src="img/elascreen_preview.png">
-            Elascreen Interface
-          </a>
-        </div>
-
-        <div class="body-img">
-          <a href="drumthewall.html">
-            <img src="img/drum_preview.png">
-            Drum The Wall
-          </a>
-        </div>
-
-    </details>
-  </div>
+<div class="content-container">
+[1] <a href="page02.html">[2]</a>
 </div>
 
 </body>
