use roboto font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Keehong Youn</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,7 +21,7 @@
   <div class="body-img">
     <a href="balanced_movement2.html">
       <img src="img/balmov2_preview.png">
-      Balanced Movement 2
+      Balanced Movement
     </a>
   </div>
 
