--- a/balanced_movement2.html
+++ b/balanced_movement2.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Keehong Youn</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,7 +17,7 @@
 </div>
 
 <div class="content-container">
-  <h2>Balanced Movement 2</h2>
+  <h2>Balanced Movement</h2>
 
   <p>
   - Realtime audiovisual, Custom C++ software<br>
@@ -24,7 +25,7 @@
   - 3360 &#215; 1080 resolution video, 2 Channel audio
   </p>
 
-  <p>This is a new iteration of the <a href="balanced_movement.html">Balanced Movement</a> with a fixed length composition. Visual style was changed and the software was modified to show the work on a curved projection screen. Balanced Movement 2 was exhibited at the Media Arts and Technology End of Year Show 2019, UC Santa Barbara.</p>
+  <p>This is a new iteration of the <a href="balanced_movement.html">Balanced Movement</a> with a fixed length composition. Visual style was changed and the software was modified to show the work on a curved projection screen. Balanced Movement was exhibited at the Media Arts and Technology End of Year Show 2019, UC Santa Barbara.</p>
 
   <div class="body-img">
       <img src="img/balmov/bm3.png">
